--- a/index.html
+++ b/index.html
@@ -187,19 +187,41 @@
 			<hr>
 				
 
-				<form id="msg-us" class="contact-us col-md-10 col-10 offset-1">
-				  <div class="form-group">
-				  	<label for="client-name"> Your name:</label>
-				  	<input id="client-name" class="form-control" type="text" placeholder="first name">
-				    <label for="email">Email address:</label>
-				    <input type="email" class="form-control" id="email" placeholder="name@example.com">
-				  </div>
-				  <div class="form-group">
-				    <label for="exampleFormControlTextarea1">Message</label>
-				    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Enter your message here.."></textarea>
-				  </div>
-				</form>
+			<div class="row">
+			<header class="col-12">
+				<h1 class="text-center py-3">Contact Us Page</h1>
+			</header>
 
+			<div class="col-md-6 col-12">
+				<form id="form">
+					<div class="form-group">
+						<label for="username">Username:</label>
+						<input id="username" class="form-control" type="text" placeholder="Enter Your Username Here..">
+					</div> <!-- end form group -->
+					<div class="form-group">
+						<label for="email">Email:</label>
+						<input id="email" class="form-control" type="text" placeholder="Enter Your Email Here..">
+					</div> <!-- end form group -->
+					<div class="form-group">
+						<label for="contact">Contact Number:</label>
+						<input id="contact" class="form-control" type="number" placeholder="Enter Your Contact Number Here..">
+					</div> <!-- end form group -->		
+			
+					<div class="form-group">
+						<label for="message">Message:</label>
+						<textarea id="message" class="form-control" placeholder="Enter Your Message Here.."></textarea>
+					</div>	<!-- end form group -->				
+
+					<button class="btn btn-block btn-outline-success">Submit</button>
+				</form>
+			</div> <!-- end form column -->
+
+			<div class="col-md-6 col-12">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d682.6392378779136!2d121.13215150243592!3d14.565384703330167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c70cf443c343%3A0x64610fa473836433!2sParamdam%2C+Taytay%2C+Rizal!5e0!3m2!1sfil!2sph!4v1540277168264" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div> <!-- end google map -->
+
+
+		</div> <!-- end row -->
 
 
 
