adding capstone1 link

--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
 				
 				<div class="progress" style="height:60px">
 					<img class="skillicon" src="assets/images/html5.jpg">
-	  				<div id="html" class="progress-bar skill1">90%</div>
+	  				<div id="html" class="progress-bar skill1">85%</div>
 				</div>
 
 				<div class="progress" style="height:60px">
 					<img class="skillicon" src="assets/images/css3.jpg">
-	  				<div class="progress-bar skill2">85%</div>
+	  				<div class="progress-bar skill2">80%</div>
 				</div>
 
 				<div class="progress" style="height:60px">
 					<img class="skillicon" src="assets/images/bootstrap4.jpg">
-	  				<div class="progress-bar skill3">80%</div>
+	  				<div class="progress-bar skill3">65%</div>
 				</div>
 				
 				<div class="progress" style="height:60px">
 					<img class="skillicon" src="assets/images/javascript.jpg">
-	  				<div class="progress-bar skill4">75%</div>
+	  				<div class="progress-bar skill4">70%</div>
 
 				</div>
 			</div>	
@@ -129,7 +129,7 @@
 	  			<div class="card-body">
 	    			<h5 class="card-title">Capstone 1</h5>
 	    			<p class="card-text">This shows the landing page of our first project</p>
-	    			<a href="#" class="btn btn-outline-primary">View more</a>
+	    			<a href="https://deleonferdinand.github.io/Capstone1/" class="btn btn-outline-primary" target="_blank">View more</a>
 	  			</div>
 			</div>
 			<div class="card col col-md-4 col-12 card-proj" >
